[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/main_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://art/cross.svg" type="Texture" id=2]
[ext_resource path="res://scripts/CraftingMenu.gd" type="Script" id=3]
[ext_resource path="res://resources/smaller_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/items/ItemSlot.tscn" type="PackedScene" id=5]

[node name="CraftingMenu" type="Panel"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 50.0
margin_right = -150.0
margin_bottom = -100.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 720.0
margin_bottom = 446.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 716.0
margin_bottom = 43.0
alignment = 1

[node name="Heading" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 277.0
margin_top = 2.0
margin_right = 385.0
margin_bottom = 41.0
grow_horizontal = 2
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 1 )
text = "Crafting"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 667.0
margin_right = 716.0
margin_bottom = 43.0
size_flags_horizontal = 0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 716.0
margin_bottom = 442.0
size_flags_horizontal = 3
size_flags_vertical = 3
collapsed = true

[node name="RecipeHints" type="ScrollContainer" parent="VBoxContainer/HSplitContainer"]
margin_right = 352.0
margin_bottom = 389.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/RecipeHints"]
margin_right = 171.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/RecipeHints/VBoxContainer"]
margin_right = 171.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
text = "Recipe hints here"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
margin_left = 364.0
margin_right = 716.0
margin_bottom = 389.0
size_flags_horizontal = 3

[node name="CraftingGrid" type="GridContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
margin_right = 352.0
margin_bottom = 349.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="1" parent="VBoxContainer/HSplitContainer/VBoxContainer/CraftingGrid" instance=ExtResource( 5 )]
margin_right = 114.0
margin_bottom = 113.0

[node name="2" parent="VBoxContainer/HSplitContainer/VBoxContainer/CraftingGrid" instance=ExtResource( 5 )]
margin_left = 118.0
margin_right = 232.0
margin_bottom = 113.0

[node name="3" parent="VBoxContainer/HSplitContainer/VBoxContainer/CraftingGrid" instance=ExtResource( 5 )]
margin_left = 236.0
margin_right = 350.0
margin_bottom = 113.0

[node name="4" parent="VBoxContainer/HSplitContainer/VBoxContainer/CraftingGrid" instance=ExtResource( 5 )]
margin_top = 117.0
margin_right = 114.0
margin_bottom = 230.0

[node name="5" parent="VBoxContainer/HSplitContainer/VBoxContainer/CraftingGrid" instance=ExtResource( 5 )]
margin_left = 118.0
margin_top = 117.0
margin_right = 232.0
margin_bottom = 230.0

[node name="6" parent="VBoxContainer/HSplitContainer/VBoxContainer/CraftingGrid" instance=ExtResource( 5 )]
margin_left = 236.0
margin_top = 117.0
margin_right = 350.0
margin_bottom = 230.0

[node name="7" parent="VBoxContainer/HSplitContainer/VBoxContainer/CraftingGrid" instance=ExtResource( 5 )]
margin_top = 234.0
margin_right = 114.0
margin_bottom = 347.0

[node name="8" parent="VBoxContainer/HSplitContainer/VBoxContainer/CraftingGrid" instance=ExtResource( 5 )]
margin_left = 118.0
margin_top = 234.0
margin_right = 232.0
margin_bottom = 347.0

[node name="9" parent="VBoxContainer/HSplitContainer/VBoxContainer/CraftingGrid" instance=ExtResource( 5 )]
margin_left = 236.0
margin_top = 234.0
margin_right = 350.0
margin_bottom = 347.0

[node name="CraftButton" type="Button" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
margin_left = 118.0
margin_top = 353.0
margin_right = 233.0
margin_bottom = 389.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "Craft Item"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/VBoxContainer/CraftButton" to="." method="_on_CraftButton_pressed"]
